加入数据库框架, 加入精选页面详情以及缓存机制

--- a/currencySpirit/src/main/res/values/colors.xml
+++ b/currencySpirit/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="dividerColor">#cccc</color>
     <color name="item_down">#F0F0F0</color>
     <color name="item_up">@android:color/white</color>
+    <color name="progressbar_drawable">#43BF17</color>
 </resources>
