--- a/currencySpirit/src/main/res/layout/activity_weibo_details.xml
+++ b/currencySpirit/src/main/res/layout/activity_weibo_details.xml
@@ -12,12 +12,12 @@
         <TextView
             android:id="@+id/title"
             android:layout_centerInParent="true"
+            android:textSize="20sp"
+            android:textColor="#000"
+            android:textStyle="bold"
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/item_essence"
-            android:textColor="#000"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:text="@string/item_information"/>
     </RelativeLayout>
 </LinearLayout>
