--- a/currencySpirit/src/main/res/layout/item_information.xml
+++ b/currencySpirit/src/main/res/layout/item_information.xml
@@ -5,11 +5,12 @@
     android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/iv_icon"
+        android:scaleType="fitXY"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_margin="5dp"/>
+        android:padding="10dp"/>
     <TextView
         android:id="@+id/tv_time"
         android:textSize="10sp"
